# evo-agents

./: .gitignore  CLAUDE.md  INSIGHTS.md  README.md  RESEARCH_STATUS.md  RESEARCH_STATUS_ko.md  main.py  pyproject.toml  review.md
.claude/: settings.json
data/briefs/: agentclinic.md  financebench.md  mediq.md
docs/insights/: pilot.md  pilot_ko.md
docs/presentations/2026-04-26-evo-agents/: 1-advisor-talk.pptx  2-paper-style-ko.md  2-paper-style-ko.pptx  DESIGN.md
docs/specs/: 2026-04-26-controller-v3-design.md  2026-04-27-swebench-factored-design.md
notebooks/: _build_calib_01_analysis.py  calib_01_analysis.ipynb  demo.ipynb
references/: project.md  project_ko.md  roadmap.md  roadmap_ko.md
scripts/: analyze_streaming.py  build_advisor_deck.py  build_paper_deck_ko.py  eval_evolved_only.py  eval_sanity_v3_fb.py  inspect_controller_input.py  make_presentation_figures.py  run_pilot.py  serve_vllm.sh
src/: baselines.py  controller.py  datasets.py  evolve.py  graph.py  llm.py  orchestrator.py  score.py  types.py
