[project]
name = "agent-orchestration"
version = "0.1.0"
description = "Reflection-based self-evolving multi-agent orchestration (NeurIPS pilot)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=2.20",
    "openai>=1.40",
    "pydantic>=2.6",
    "networkx>=3.2",
    "matplotlib>=3.8",
    "tqdm>=4.66",
    "python-dotenv>=1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
